force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Responsive External</fullName>
            </value>
            <value>
                <fullName>Incomplete Information</fullName>
            </value>
            <value>
                <fullName>Inaccurate Information</fullName>
            </value>
            <value>
                <fullName>Unclear Information</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Meet Compliance Standards</fullName>
            </value>
            <value>
                <fullName>No mention of genetics</fullName>
            </value>
            <value>
                <fullName>No mention of 3rd Party Data Sharing</fullName>
            </value>
            <value>
                <fullName>No mention of Commercial 3rd Party Data Sharing</fullName>
            </value>
            <value>
                <fullName>Contemplated Return of Results/Clinically Action Genetic Data to Patients</fullName>
            </value>
            <value>
                <fullName>Patient study opt outs or withdrawal rights</fullName>
            </value>
            <value>
                <fullName>Requirement to destroy DNA samples</fullName>
            </value>
            <value>
                <fullName>Incorrect Consent Forms</fullName>
            </value>
            <value>
                <fullName>Request IRB Approval Letter</fullName>
            </value>
            <value>
                <fullName>Request Correct Consent Forms</fullName>
            </value>
            <value>
                <fullName>Request Re-Consent of Patients in Cohort</fullName>
            </value>
            <value>
                <fullName>Request Revised Consent Form</fullName>
            </value>
            <value>
                <fullName>Phenotype</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
            <value>
                <fullName>Data Sharing</fullName>
            </value>
            <value>
                <fullName>Data Analysis Plan</fullName>
            </value>
            <value>
                <fullName>RCA - Domestic No Budget Agreement</fullName>
            </value>
            <value>
                <fullName>RCA -Domestic Budget Agreement</fullName>
            </value>
            <value>
                <fullName>RCA -EU No Budget Agreement</fullName>
            </value>
            <value>
                <fullName>RCA -EU Budget Agreement</fullName>
            </value>
            <value>
                <fullName>RCA -ROW No Budget Agreement</fullName>
            </value>
            <value>
                <fullName>RCA -ROW Budget Agreement</fullName>
            </value>
            <value>
                <fullName>RCA -Large Scale No Budget Agreement</fullName>
            </value>
            <value>
                <fullName>RCA -Large Scale Budget Agreement</fullName>
            </value>
            <value>
                <fullName>RCA -Custom Agreement (Term Sheet)</fullName>
            </value>
            <value>
                <fullName>Definitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>