force-app/main/default/objects/Case/fields/Collaboration_ID__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_ID__c</fullName>
    <formula>Collaboration_Opportunity__r.Collaboration_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaboration ID</label>
    <type>Text</type>
</CustomField>