force-app/main/default/objects/Case/fields/Collaboration_Name__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Name__c</fullName>
    <formula>Collaboration_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaboration Name</label>
    <type>Text</type>
</CustomField>