force-app/main/default/objects/Case/fields/Collaboration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The collaboration opportunity the case is related to.</description>
    <label>Collaboration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>