force-app/main/default/objects/Case/fields/Collaboration_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity_Stage__c</fullName>
    <formula>TEXT( Collaboration_Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaboration Opportunity Stage</label>
    <type>Text</type>
</CustomField>