force-app/main/default/objects/Case/fields/Collaboration_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity_Status__c</fullName>
    <formula>TEXT( Collaboration_Opportunity__r.Collaboration_Status_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaboration Opportunity Status</label>
    <type>Text</type>
</CustomField>