force-app/main/default/objects/Case/fields/Issue_Reason_Specific__c.field-meta.xml
<CustomField>
    <fullName>Issue_Reason_Specific__c</fullName>
    <label>Issue Reason (Specific)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phenotype Data Quality</fullName>
            </value>
            <value>
                <fullName>Phenotype Data Structure</fullName>
            </value>
            <value>
                <fullName>Phenotype Data Availability</fullName>
            </value>
            <value>
                <fullName>Sample Quality</fullName>
            </value>
            <value>
                <fullName>Sample Quantity</fullName>
            </value>
            <value>
                <fullName>Sample Volume Requirements</fullName>
            </value>
            <value>
                <fullName>Sample Breakdown</fullName>
            </value>
            <value>
                <fullName>Sample Origin</fullName>
            </value>
            <value>
                <fullName>Genomic Data License</fullName>
            </value>
            <value>
                <fullName>Genomic Data Sharing</fullName>
            </value>
            <value>
                <fullName>Genomic Data Use</fullName>
            </value>
            <value>
                <fullName>Results Sharing</fullName>
            </value>
            <value>
                <fullName>Materials License</fullName>
            </value>
            <value>
                <fullName>Materials Sharing</fullName>
            </value>
            <value>
                <fullName>Materials Use</fullName>
            </value>
            <value>
                <fullName>Phenotype Data License</fullName>
            </value>
            <value>
                <fullName>Phenotype Data Sharing</fullName>
            </value>
            <value>
                <fullName>Phenotype Data Use</fullName>
            </value>
            <value>
                <fullName>Results/Research Data License</fullName>
            </value>
            <value>
                <fullName>Results/Research Data Sharing</fullName>
            </value>
            <value>
                <fullName>Results/Research Data Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>