force-app/main/default/objects/Case/fields/Reason_Details_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_Details_Other__c</fullName>
    <label>Reason Details</label>
    <type>TextArea</type>
</CustomField>