force-app/main/default/objects/Case/fields/Sort_Status__c.field-meta.xml
<CustomField>
    <fullName>Sort_Status__c</fullName>
    <formula>CASE(Status,
  &quot;Escalated&quot;, 1,
  &quot;On Hold&quot;, 2,
  &quot;New&quot;, 3,
4)</formula>
    <label>Sort Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>