force-app/main/default/objects/Case/listViews/My_Open_Issues_In_Progress_Collabs.listView-meta.xml
<ListView>
    <fullName>My_Open_Issues_In_Progress_Collabs</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Collaboration_Opportunity__c</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Collaboration_Opportunity_Status__c</field>
        <operation>notEqual</operation>
        <value>On Hold</value>
    </filters>
    <label>My Open Issues: In Progress Collabs</label>
</ListView>